# apidoc-hs

./: .ghci  .gitignore  .travis.yml  README.md  apidoc-hs.cabal  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-U.html  doc-index.html  index.html  package.yaml  stack.yaml  update-gh-pages.sh
HTTP-4000.3.5/: HTTP.haddock  HTTP.txt  Network-Browser.html  Network-BufferType.html  Network-HTTP-Auth.html  Network-HTTP-Base.html  Network-HTTP-Cookie.html  Network-HTTP-HandleStream.html  Network-HTTP-Headers.html  Network-HTTP-Proxy.html  Network-HTTP-Stream.html  Network-HTTP.html  Network-Stream.html  Network-StreamDebugger.html  Network-StreamSocket.html  Network-TCP.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index.html  mini_Network-BufferType.html  (+5 more)
HTTP-4000.3.6/: HTTP.haddock  HTTP.txt  Network-Browser.html  Network-BufferType.html  Network-HTTP-Auth.html  Network-HTTP-Base.html  Network-HTTP-Cookie.html  Network-HTTP-HandleStream.html  Network-HTTP-Headers.html  Network-HTTP-Proxy.html  Network-HTTP-Stream.html  Network-HTTP.html  Network-Stream.html  Network-StreamDebugger.html  Network-StreamSocket.html  Network-TCP.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index.html  mini_Network-Browser.html  (+7 more)
adjunctions-4.3/: Control-Comonad-Representable-Store.html  Control-Comonad-Trans-Adjoint.html  Control-Monad-Representable-Reader.html  Control-Monad-Representable-State.html  Control-Monad-Trans-Contravariant-Adjoint.html  Control-Monad-Trans-Conts.html  Data-Functor-Adjunction.html  Data-Functor-Contravariant-Adjunction.html  Data-Functor-Contravariant-Rep.html  Data-Functor-Rep.html  adjunctions.haddock  adjunctions.txt
aeson-1.0.2.1/: Data-Aeson-Encode.html  Data-Aeson-Encoding-Internal.html  Data-Aeson-Encoding.html  Data-Aeson-Internal-Time.html  Data-Aeson-Internal.html  Data-Aeson-Parser.html  Data-Aeson-TH.html  Data-Aeson-Text.html  Data-Aeson-Types.html  Data-Aeson.html  aeson.haddock  aeson.txt  doc-index-46.html  doc-index-60.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index.html  (+3 more)
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  (+39 more)
apidoc-cli/: README.md  apidoc-cli.cabal  default.nix  shell.nix  stack.yaml
apidoc-cli/src/: Main.hs
apidoc-cli/static/: apidoc-api-service.json
apidoc-th/: .ghci  apidoc-hs.cabal  apidoc-th.cabal  default.nix  stack.yaml  update-gh-pages.sh
apidoc-th/src/Apidoc/: TH.hs
apidoc-th/src/Apidoc/TH/Internal/: Stage2.hs
apidoc-th/src/Apidoc/TH/Internal/Stage1/: Types.hs
apidoc-th/src/Apidoc/Types/: Api.hs  Common.hs  Generator.hs  Spec.hs
apidoc-th/static/: apidoc-generator-service.json
apidoc-th/test/: ShouldCompile.hs
apidoc-th/test/ShouldCompile/: Api.hs  Common.hs  Generator.hs
apidoc-th/test/static/: apidoc-api-service.json  apidoc-common-service.json
(+781 files in other folders)
