name:           apidoc-hs
version:        0.0.1
category:       Web
homepage:       https://github.com/utdemir/apidoc-hs
author:         Utku Demir
maintainer:     me@utdemir.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules:
      Apidoc.Types
      Apidoc.TH
  other-modules:
      Apidoc.Internal.TH
      Apidoc.Internal.Types
      Apidoc.Internal.TH.Gen
      Apidoc.Internal.TH.Types
      Apidoc.Internal.Bootstrap
      Apidoc.Internal.Bootstrap.TH
      Apidoc.Internal.Bootstrap.Types


  build-depends:
      base >= 4.7 && < 5
    , aeson
    , containers
    , unordered-containers
    , text
    , bytestring
    , template-haskell
    , casing
    , uuid-types
    , attoparsec
    , HTTP
    , network-uri
    , split
    , time
    , lens
