name:           apidoc-hs
version:        0.0.1
category:       Web
homepage:       https://github.com/utdemir/apidoc-hs
author:         Utku Demir
maintainer:     me@utdemir.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
synopsis:       Generate Haskell data types from Apidoc schemas using Template Haskell.

library
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules:
      Apidoc.TH
      Apidoc.Types.Spec
      Apidoc.Types.Api
      Apidoc.Types.Generator
      Apidoc.Types.Common
  other-modules:
      Apidoc.TH.Internal.Stage1
      Apidoc.TH.Internal.Stage1.TH
      Apidoc.TH.Internal.Stage1.Types
      Apidoc.TH.Internal.Stage2
      Apidoc.TH.Internal.Gen.Simple
      Apidoc.TH.Internal.Gen.Simple.Types
      Apidoc.TH.Internal.Gen.Servant
      Apidoc.TH.Internal.Gen.Utils
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , containers
    , unordered-containers
    , text
    , bytestring
    , template-haskell
    , casing
    , uuid-types
    , attoparsec
    , HTTP
    , network-uri
    , split
    , time
    , microlens
    , servant
