name:           apidoc-th
version:        0.0.1
category:       Web
homepage:       https://github.com/utdemir/apidoc-hs
author:         Utku Demir
maintainer:     me@utdemir.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
synopsis:       Generate Haskell data types from Apidoc schemas using Template Haskell.
extra-source-files:
  static/apidoc-spec-service.json
  test/static/apidoc-api-service.json
  test/static/apidoc-common-service.json
  test/static/apidoc-generator-service.json

library
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules:
      Apidoc.TH
      Apidoc.Types.Spec
  other-modules:
      Apidoc.TH.Internal.Stage1
      Apidoc.TH.Internal.Stage1.TH
      Apidoc.TH.Internal.Stage1.Types
      Apidoc.TH.Internal.Stage2
      Apidoc.TH.Internal.Gen.Simple
      Apidoc.TH.Internal.Gen.Simple.Types
      Apidoc.TH.Internal.Gen.Utils
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , containers
    , unordered-containers
    , text
    , bytestring
    , template-haskell
    , casing
    , uuid-types
    , attoparsec
    , HTTP
    , network-uri
    , split
    , time
    , microlens

test-suite should-compile
  type:           exitcode-stdio-1.0
  main-is:        ShouldCompile.hs
  hs-source-dirs: test/
  build-depends: base
               , apidoc-th